manifests/step-1/nginx-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: thatdot-openshift
  labels:
    app: nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
